# bazel_tutorial

./: .gitignore  MODULE.bazel  README.md  local_test.sh
.github/workflows/: bazel_build.yml
Python/: BUILD  requirements.txt
Python/src/: client.py  graph.py  main.py
Python/test/: test-graph.py
terraform/: main.tf  variables.tf
